@@ -233,13 +233,17 @@ public class Gossiper implements IFailureDetectionEventListener, GossiperMBean, 
 
         // Check the release version of all the peers it heard of. Not necessary the peer that it has/had contacted with.
         boolean allHostsHaveKnownVersion = true;
-        for (InetAddressAndPort host : endpointStateMap.keySet())
+        for (Entry<InetAddressAndPort, EndpointState> entry : endpointStateMap.entrySet())
         {
+            InetAddressAndPort host = entry.getKey();
             if (justRemovedEndpoints.containsKey(host))
                 continue;
 
-            CassandraVersion version = getReleaseVersion(host);
+            // if it is dead state, we skip the version check
+            if (isDeadState(entry.getValue()))
+                continue;
 
+            CassandraVersion version = getReleaseVersion(host);
             //Raced with changes to gossip state, wait until next iteration
             if (version == null)
                 allHostsHaveKnownVersion = false;
