@@ -1,4 +1,5 @@
 5.0-beta2
+ * Skip version check if an endpoint is dead state (CASSANDRA-19187)
  * Fix resource cleanup after SAI query timeouts (CASSANDRA-19177)
  * Suppress CVE-2023-6481 (CASSANDRA-19184)
 Merged from 4.1:
